# xauusd-market-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  PROJECT_STATE.md  README.md  ROADMAP.md  SECURITY.md  apply_v2.5.0_artifact_contract.py  apply_v2.5.1_context_summary_snapshot.py  apply_v2.5.1_validation_fix.py  pyproject.toml  xauusd-market-context-v2.5.0-artifact-contract.patch  xauusd-market-context-v2.5.1-context-summary-snapshot.patch  xauusd-market-context-v2.5.1-validation-fix.patch
bridges/: README.md
data/: README.md
docs/: ADOPTION_GUIDE.md  ARTIFACT_CONTRACT.md  ARTIFACT_JSON_SCHEMAS.md  ARTIFACT_SCHEMA_COMPATIBILITY.md  CASE_LIBRARY_CLI_ARTIFACTS.md  CASE_LIBRARY_CLI_ARTIFACT_BOUNDARY_NOTES.md  CASE_LIBRARY_CLI_ARTIFACT_BOUNDARY_V9.md  CASE_LIBRARY_CLI_BOUNDARY_SUMMARY.md  CASE_LIBRARY_CLI_NO_EXECUTION.md  CASE_LIBRARY_CLI_QUICKSTART.md  CASE_LIBRARY_CLI_README.md  CASE_LIBRARY_INDEX_REVIEW_WORKFLOW_V9.md  CASE_LIBRARY_SEED_V9.md  CASE_REVIEW_BATCH_EVIDENCE_PACK_V9.md  CLAUDE_FOR_OSS_POSITIONING.md  CLI_USAGE.md  COMPACT_LIFECYCLE_ENGINE_V9.md  CONTEXT_SUMMARY.md  DATA_SOURCE_POLICY.md  DEMO_WALKTHROUGH.md  EVENT_DATASET_SCHEMA_V9.md  EVENT_REPLAY_HARNESS_V9.md  GITHUB_PAGES_DEMO.md  GITHUB_RELEASE_READINESS.md  ISSUE_BACKLOG_SEED.md  JSON_SCHEMA_VALIDATION_COVERAGE.md  LFX_EXTERNAL_BASELINE.md  LFX_MONITOR_VOCABULARY.md  LIQUIDITY_NODE_GRAPH_V9.md  LOCAL_REFERENCE_DATA_ADAPTER_CONTRACT.md  MT5_EXPORT_GUIDE.md  NODE_GRAPH_REPLAY_INTEGRATION_V9.md  OANDA_LIVE_DASHBOARD.md  PACKAGE_PUBLICATION_READINESS.md  PRACTICAL_ZONE_DECK.md  REAL_WORLD_USAGE.md  REPO_CLEANUP_V9.md  REPO_STRUCTURE_TARGET_v9.md  REVIEWER_NOTES_PATCH_WORKFLOW_V9.md  SHARING_VALIDATION_REPORTS.md  (+19 more)
(+128 files in other folders)
